# neuroagent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LATEST_COMMIT.md  README.md  deepdocs.yml  docker-compose.yml  mkdocs.yml  package-lock.json  pyproject.toml
backend/: .dockerignore  .env.app.example  .env.example  .env.tasks.example  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.tasks  README.md  docker-entrypoint.sh  ec_hierarchy.json  ec_openapi.json  example.json  mcp_config.json  pydantic_experiment.py  pyproject.toml  reposnse.json  setup_pyodide.mjs  something.py  temp.txt  wqallzz:q
backend/alembic/: env.py
backend/alembic/versions/: 02aab0a6eef4_track_token_usage.py  08a638866869_partial_messages.py  0ea274d7a584_remove_order_column.py  12bd7610cbc2_within_tool_call_task.py  25cefa8449c6_change_to_response_api.py  4831c86825d4_tool_call_unique_id.py  529e44b33a67_switch_to_uuid.py  52d7f4485020_add_model_column_to_messages.py  6d8986f38d7b_complexity_estimation.py  7122d2f48028_switch_to_offset_aware_datetimes.py  76a8fcb519ad_state_sharing_table.py  818a9ba86187_allow_empty_vlab_project.py  825dd56cabf4_add_tool_selection_table.py  92694adcad71_message_content_jsonb.py  cd5a73ea91db_add_ts_vector.py  dde4f8453a14_add_tool_selection_table.py  e5caaf5a29f0_introduce_parent_thread_id.py  fdf804b5fd7c_model_selection_table.py  ff0c094f5044_variables.py
backend/docs/: neuroagent-capabilities.md
backend/eval/: README.md  eval_dataset.csv  eval_results.csv
backend/eval/aggregate/: overall_results.json
backend/eval/output/: detailed.json  scores.json
backend/eval/ui/: app.js  detail.html  index.html  products.html  styles.css
backend/src/neuroagent/: README.md  __init__.py  agent_routine.py  base_types.py  cell_types.py  config.py  executor.py  fixed_llm_responses.yml  mcp.json  mcp.py  new_types.py  platform_description.json  schemas.py  shared_state.py  sitemap-agent.json  task_schemas.py  utils.py
backend/tests/: conftest.py  mock_client.py  test_agent_routine.py  test_executor.py  test_utils.py
backend/tests/app/: test_agent_routine.py  test_app_utils.py  test_config.py  test_dependencies.py  test_main.py
backend/tests/data/: entitycore_brain_region.json  entitycore_morphologies_thalamus.json  entitycore_mtype.json  kg_me_model_output.json
backend/tests/scripts/: test_embed_hierarchies.py  test_embed_mtypes.py
backend/tests/storage/: test_azure_storage.py  test_s3_storage.py
backend/tests/tasks/: test_utils.py
backend/tests/tools/: test_base_tool.py  test_context_analyzer_tool.py  test_electrophys_tool.py  test_generate_plot.py  (+17 more)
(+1505 files in other folders)
